# re-place

./: .clang-format  .clang-tidy  .clangd  .gdb_history  .gitignore  .gitmodules  CMakeLists.txt  README.md  submodule.sh
.cache/clangd/index/: api.c.CEE1C56D1D0AB5D0.idx  api.h.ADA02821FAF97FF7.idx  error.hpp.066F1C9D98CD3F9F.idx  expected.hpp.68255E97416AF50E.idx  expected.tpp.6B95762D49A0238C.idx  hash.hpp.8715E8F8CF3C8FDF.idx  http.c.357AD18EAF34AEA4.idx  llhttp.c.69878B7F898F87C9.idx  llhttp.h.CA0464C8A9CEDED9.idx  macro.hpp.F06796BCFCE40C89.idx  main.cpp.4D8806563A872BDE.idx  main.hpp.3FDB29E74089CF15.idx  murmur3.cpp.257CCCA4BB18F552.idx  murmur3.h.6AA74A8284649936.idx  number.cpp.2967BB2106E0D02C.idx  optional.hpp.0427015C1505EA76.idx  optional.tpp.545483AFB4CB5A25.idx  prime.cpp.209DA8F3A51D3371.idx  prime.hpp.E6A988974CF71DA8.idx  shared_ptr.hpp.E18729847D8E3250.idx  shared_ptr.tpp.2AAF1AFF03E7E317.idx  string.cpp.ADF65FCF9A1E0179.idx  string.hpp.6AD16CB90DCB3B23.idx  transaction.cpp.E674FE332E9EA098.idx  transaction.hpp.89AEC663A780C769.idx  type_traits.hpp.A44D95029770759F.idx  types.hpp.2EE6ED36EA007674.idx  types.hpp.724C56912B8B2545.idx  unique_ptr.hpp.C10D5DA1FC3E908A.idx  unique_ptr.tpp.BEDB7E194FB89487.idx  user.cpp.F57307D578266986.idx  user.hpp.8A9FA514A876D9D1.idx  vector.hpp.38DC6B95F89DAEAE.idx  vector.tpp.8CE165AC2E4FF789.idx  vector_iterator.hpp.A53E33A34E26D939.idx  vector_string.hpp.81D50BDDDD73E2C7.idx
.github/workflows/: test.yml
cmake/: FindArgon2.cmake
sql/: .env  connect.sh  docker-compose.yaml
sql/dataset/: init.sql
sql/dataset/tables/: canvases.sql  pixels.sql  users.sql
src/: main.cpp  types.cpp  types.hpp
src/api/: auth.cpp  auth.hpp
src/api/asio/: connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  mime_types.cpp  mime_types.hpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  response.cpp  response.hpp  router.hpp  server.cpp  server.hpp
src/cache/: redis.cpp  redis.hpp  session.hpp
src/cache/redis/: session.cpp  session.hpp
src/config/: logger-dev.cpp  logger-prod.cpp  logger.hpp  types.hpp
src/entity/: user.cpp  user.hpp
src/repo/: pg.cpp  pg.hpp  user.hpp  valkey.cpp  valkey.hpp
src/repo/pg/: user.cpp  user.hpp
src/repo/session/: def.hpp  valkey.cpp  valkey.hpp
src/repo/user/: def.hpp  pg.cpp  pg.hpp  test.cpp  test.hpp
src/service/: auth.hpp
src/use-case/auth/: login.cpp  login.hpp  register.hpp
src/utils/crypto/: crypto.hpp  password.cpp
src/utils/logger/: dev.cpp  logger.hpp  prod.cpp  silent.cpp
test/: CMakeLists.txt  test.hpp
test/integration/: CMakeLists.txt  auth.cpp  main.cpp  test.hpp
test/unit/: CMakeLists.txt  crypto.cpp  main.cpp  test.hpp
